--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,7 @@
 	path = bundle/dracula-theme
 	url = https://github.com/dracula/vim.git
 [submodule "bundle/fugitive"]
-	path = bundle/fugitive
+	path = bundle/vim-fugitive
 	url = http://github.com/tpope/vim-fugitive.git
 [submodule "bundle/lightline.vim"]
 	path = bundle/lightline.vim
@@ -13,9 +13,3 @@
 [submodule "bundle/syntastic"]
 	path = bundle/syntastic
 	url = https://github.com/vim-syntastic/syntastic
-[submodule "bundle/youcompleteme"]
-	path = bundle/youcompleteme
-	url = https://valloric.github.io/YouCompleteMe/
-[submodule "bundle/dash"]
-	path = bundle/dash
-	url = https://github.com/rizzatti/dash.vim.git
